Added animations for player and zombies

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -181,6 +181,11 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Zombheads.WeaponsData.ShotSound",NewName="/Script/Zombheads.WeaponsData.UseSound")
++FunctionRedirects=(OldName="/Script/Zombheads.PlayerPawn.StartLoopingAnimation",NewName="/Script/Zombheads.PlayerPawn.StartAnimationMontage")
++FunctionRedirects=(OldName="/Script/Zombheads.PlayerPawn.StopLoopingAnimation",NewName="/Script/Zombheads.PlayerPawn.StopAnimationMontage")
++EnumRedirects=(OldName="/Script/Zombheads.EWeaponType",NewName="/Script/Zombheads.EItemType")
++PropertyRedirects=(OldName="/Script/Zombheads.PDA_Character.WalkingSpeed",NewName="/Script/Zombheads.PDA_Character.PlayerWalkingSpeed")
++PropertyRedirects=(OldName="/Script/Zombheads.PDA_Character.RunningSpeed",NewName="/Script/Zombheads.PDA_Character.PlayerRunningSpeed")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
