Added Animations for Characters , Added EnhancedInput System, Upgraded engine veersion to 5.2, Added sprint, Refactored some things, added HUD by Slate impl

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,6 +9,7 @@ CopyrightNotice=Permission is hereby granted, free of charge, to any person obta
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass="/Script/Engine.PrimaryAssetLabel",bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Weapons",AssetBaseClass="/Script/Zombheads.WeaponsPrimaryDataAsset",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/Data")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="Animations",AssetBaseClass="/Script/Zombheads.AnimationsPrimaryDataAsset",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/Data")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Character",AssetBaseClass="/Script/Zombheads.PDA_Character",bHasBlueprintClasses=False,bIsEditorOnly=False,Directories=((Path="/Game/Data")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
