Refactored Primary Data Assets to use pre-def string id keys, further implementation of AI , unfortunetly DetourCrowdAI not working on APawn :(

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [Audio]
 UseAudioMixer=True
 
@@ -205,14 +203,13 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
-
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Zombheads.WeaponsData.ShotSound",NewName="/Script/Zombheads.WeaponsData.UseSound")
++PropertyRedirects=(OldName="/Script/Zombheads.PDA_Character.WalkingSpeed",NewName="/Script/Zombheads.PDA_Character.PlayerWalkingSpeed")
++PropertyRedirects=(OldName="/Script/Zombheads.PDA_Character.RunningSpeed",NewName="/Script/Zombheads.PDA_Character.PlayerRunningSpeed")
 +FunctionRedirects=(OldName="/Script/Zombheads.PlayerPawn.StartLoopingAnimation",NewName="/Script/Zombheads.PlayerPawn.StartAnimationMontage")
 +FunctionRedirects=(OldName="/Script/Zombheads.PlayerPawn.StopLoopingAnimation",NewName="/Script/Zombheads.PlayerPawn.StopAnimationMontage")
 +EnumRedirects=(OldName="/Script/Zombheads.EWeaponType",NewName="/Script/Zombheads.EItemType")
-+PropertyRedirects=(OldName="/Script/Zombheads.PDA_Character.WalkingSpeed",NewName="/Script/Zombheads.PDA_Character.PlayerWalkingSpeed")
-+PropertyRedirects=(OldName="/Script/Zombheads.PDA_Character.RunningSpeed",NewName="/Script/Zombheads.PDA_Character.PlayerRunningSpeed")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -282,11 +279,31 @@ bShouldDiscardSubLevelNavData=True
 bTickWhilePaused=False
 bInitialBuildingLocked=False
 bSkipAgentHeightCheckWhenPickingNavData=False
+GeometryExportTriangleCountWarningThreshold=200000
 bGenerateNavigationOnlyAroundNavigationInvokers=False
 ActiveTilesUpdateInterval=1.000000
 DataGatheringMode=Instant
 DirtyAreaWarningSizeThreshold=-1.000000
 GatheringNavModifiersWarningLimitTime=-1.000000
 SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=True,bSupportsAgent3=True,bSupportsAgent4=True,bSupportsAgent5=True,bSupportsAgent6=True,bSupportsAgent7=True,bSupportsAgent8=True,bSupportsAgent9=True,bSupportsAgent10=True,bSupportsAgent11=True,bSupportsAgent12=True,bSupportsAgent13=True,bSupportsAgent14=True,bSupportsAgent15=True)
-DirtyAreasUpdateFreq=60.000000
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+AgentRadius=90.000000
+AgentHeight=320.000000
+
+[/Script/AIModule.CrowdManager]
++AvoidanceConfig=(VelocityBias=0.500000,DesiredVelocityWeight=2.000000,CurrentVelocityWeight=0.750000,SideBiasWeight=0.750000,ImpactTimeWeight=2.500000,ImpactTimeRange=2.500000,CustomPatternIdx=255,AdaptiveDivisions=5,AdaptiveRings=2,AdaptiveDepth=1)
++AvoidanceConfig=(VelocityBias=0.500000,DesiredVelocityWeight=2.000000,CurrentVelocityWeight=0.750000,SideBiasWeight=0.750000,ImpactTimeWeight=2.500000,ImpactTimeRange=2.500000,CustomPatternIdx=255,AdaptiveDivisions=5,AdaptiveRings=2,AdaptiveDepth=2)
++AvoidanceConfig=(VelocityBias=0.500000,DesiredVelocityWeight=2.000000,CurrentVelocityWeight=0.750000,SideBiasWeight=0.750000,ImpactTimeWeight=2.500000,ImpactTimeRange=2.500000,CustomPatternIdx=255,AdaptiveDivisions=7,AdaptiveRings=2,AdaptiveDepth=3)
++AvoidanceConfig=(VelocityBias=0.500000,DesiredVelocityWeight=2.000000,CurrentVelocityWeight=0.750000,SideBiasWeight=0.750000,ImpactTimeWeight=2.500000,ImpactTimeRange=2.500000,CustomPatternIdx=255,AdaptiveDivisions=7,AdaptiveRings=3,AdaptiveDepth=3)
+MaxAgents=50
+MaxAgentRadius=200.000000
+MaxAvoidedAgents=6
+MaxAvoidedWalls=8
+NavmeshCheckInterval=1.000000
+PathOptimizationInterval=0.500000
+SeparationDirClamp=-1.000000
+PathOffsetRadiusMultiplier=1.000000
+bResolveCollisions=True
 
