Added Hit Zombie Animation, Added further WeaponFirearm implementation and Hitting Enemy with weapon

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -210,6 +210,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Zombheads.PlayerPawn.StartLoopingAnimation",NewName="/Script/Zombheads.PlayerPawn.StartAnimationMontage")
 +FunctionRedirects=(OldName="/Script/Zombheads.PlayerPawn.StopLoopingAnimation",NewName="/Script/Zombheads.PlayerPawn.StopAnimationMontage")
 +EnumRedirects=(OldName="/Script/Zombheads.EWeaponType",NewName="/Script/Zombheads.EItemType")
++PropertyRedirects=(OldName="/Script/Zombheads.EnemyAnimInstance.CurrentHitTime",NewName="/Script/Zombheads.EnemyAnimInstance.LastHitTime")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
