Started implementing custom editor window for selecting enemy waves in level

--- a/Zombheads.uproject
+++ b/Zombheads.uproject
@@ -13,6 +13,11 @@
 				"CoreUObject",
 				"AIModule"
 			]
+		},
+		{
+			"Name": "ZombheadsEditorModule",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
