--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -172,7 +172,7 @@ SoundCueCookQualityIndex=-1
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Sandbox1.Sandbox1
+EditorStartupMap=/Game/Levels/1STLevel_Sandbox.1STLevel_Sandbox
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -181,7 +181,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/Sandbox1.Sandbox1
+GameDefaultMap=/Game/Levels/1STLevel_Sandbox.1STLevel_Sandbox
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BPs/ZombheadsGameMode.ZombheadsGameMode_C
 GlobalDefaultServerGameMode=None
@@ -211,6 +211,9 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Zombheads.PlayerPawn.StopLoopingAnimation",NewName="/Script/Zombheads.PlayerPawn.StopAnimationMontage")
 +EnumRedirects=(OldName="/Script/Zombheads.EWeaponType",NewName="/Script/Zombheads.EItemType")
 +PropertyRedirects=(OldName="/Script/Zombheads.EnemyAnimInstance.CurrentHitTime",NewName="/Script/Zombheads.EnemyAnimInstance.LastHitTime")
++StructRedirects=(OldName="/Script/Zombheads.MyCustomStruct",NewName="/Script/Zombheads.EnemySpawnData")
++StructRedirects=(OldName="/Script/Zombheads.EnemySpawnData",NewName="/Script/Zombheads.EnemySpawnData")
++PropertyRedirects=(OldName="/Script/Zombheads.EnemySpawnData.SpawnDelay",NewName="/Script/Zombheads.EnemySpawnData.InBetweenSpawnDelay")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
