Started implementing HUD for weapons in Slate weapon icon, and weapons ammo

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -214,6 +214,7 @@ ManualIPAddress=
 +StructRedirects=(OldName="/Script/Zombheads.MyCustomStruct",NewName="/Script/Zombheads.EnemySpawnData")
 +StructRedirects=(OldName="/Script/Zombheads.EnemySpawnData",NewName="/Script/Zombheads.EnemySpawnData")
 +PropertyRedirects=(OldName="/Script/Zombheads.EnemySpawnData.SpawnDelay",NewName="/Script/Zombheads.EnemySpawnData.InBetweenSpawnDelay")
++PropertyRedirects=(OldName="/Script/Zombheads.HUDVitalityData.StaminaData",NewName="/Script/Zombheads.HUDVitalityData.WeaponData")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
