Minor code cleanup, 1st level meshes and paths, Implementing UI Module for gameover screen, implemented Points Counter on HUD in slate

--- a/Zombheads.uproject
+++ b/Zombheads.uproject
@@ -11,12 +11,18 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"CoreUObject",
-				"AIModule"
+				"AIModule",
+				"UMGEditor"
 			]
 		},
 		{
 			"Name": "ZombheadsEditorModule",
 			"Type": "Editor",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "ZombheadsUIModule",
+			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
 	],
