Fixed Building projects and unreal source, discarded idea with UI seperate module, something is broken in current Unreal Engine source build code

--- a/Zombheads.uproject
+++ b/Zombheads.uproject
@@ -11,18 +11,12 @@
 			"AdditionalDependencies": [
 				"Engine",
 				"CoreUObject",
-				"AIModule",
-				"UMGEditor"
+				"AIModule"
 			]
 		},
 		{
 			"Name": "ZombheadsEditorModule",
 			"Type": "Editor",
-			"LoadingPhase": "Default"
-		},
-		{
-			"Name": "ZombheadsUIModule",
-			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
 	],
