Started Implementing MainMenu v2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -181,7 +181,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/1STLevel_Sandbox.1STLevel_Sandbox
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BPs/ZombheadsGameMode.ZombheadsGameMode_C
 GlobalDefaultServerGameMode=None
