Fixed missing module in build, added all maps to cooking

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -112,6 +112,8 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="MainMenu")
++MapsToCook=(FilePath="1STLevel_Sandbox")
 +DirectoriesToAlwaysCook=(Path="/Game/Plugins/Polygon_WeaponsKit/Materials")
 +DirectoriesToAlwaysCook=(Path="/Game/Plugins")
 
