Final demo tweakings, fixed criticals and blockers, fixed shipping bugs

--- a/Zombheads.uproject
+++ b/Zombheads.uproject
@@ -34,7 +34,7 @@
 		},
 		{
 			"Name": "FastNoiseGenerator",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/527737f42da544e9abf8607a40495fbd"
 		}
 	]
